--- a/data/_nav.yml
+++ b/data/_nav.yml
@@ -467,4 +467,4 @@ groups:
     - url: /user-groups/support.html
       title: Support and Guidelines
     - url: /user-groups/branding.html
-      title: Branding
+      title: Branding materials
